--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "react-slick": "^0.30.3",
     "sanity": "^3.72.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
     "postcss": "^8",
