--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.72.1",
+    "aos": "^2.3.4",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.0.6",
     "next": "14.2.18",
@@ -25,6 +26,7 @@
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
