--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-slick": "^0.30.3",
     "sanity": "^3.72.1",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "swiper": "^11.2.3"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
